B&L QA/objects/Implant_Summary__c.object
<CustomObject>
    <description>Implant Data by Accout/physician/product by month</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Implant summary</relationshipLabel>
        <relationshipName>Implant_summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Implant summary</relationshipLabel>
        <relationshipName>Implant_summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Month_Implants__c</fullName>
        <label>Current Month Implants</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Month__c</fullName>
        <label>Current Month</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_01__c</fullName>
        <label>Date 01</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_02__c</fullName>
        <label>Date 02</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_03__c</fullName>
        <label>Date 03</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_System_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy System Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_01_implants__c</fullName>
        <label>Month 01 Implants</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_02_Implants__c</fullName>
        <label>Month 02 Implants</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_03_Implants__c</fullName>
        <label>Month 03 Implants</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physician_Id__c</fullName>
        <label>Physician Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_13_Months_Total__c</fullName>
        <formula>Month_01_implants__c  +  Month_02_Implants__c  + Month_03_Implants__c  + Month_04_Implants__c  +  Month_05_Implants__c  + Month_06_Implants__c  +  Month_07_Implants__c  + Month_08_Implants__c  +  Month_09_Implants__c  + Month_10_Implants__c  +  Month_11_Implants__c  +  Month_12_Implants__c  +  Month_13_Implants__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Prior 13 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Quarter_Total__c</fullName>
        <formula>Month_13_Implants__c  +  Month_12_Implants__c  +  Month_11_Implants__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Prior 3 Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Implant Summary</label>
    <nameField>
        <displayFormat>IH{0000000}</displayFormat>
        <label>Implant Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Implant summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>